--- a/embedder.html
+++ b/embedder.html
@@ -7,7 +7,7 @@
     <button>embed about:blank</button>
     <script type="text/javascript">
         var urlobj = new window.URL(window.location.href);
-        let url = prompt("url?")
+        let url = prompt("https://unblockedgames76-da9497.gitlab.io/cookie-clicker-10.html")
         if (url) {
             var win;
             document.querySelector('button'). onclick = function() {
